# laguna-cli

./: .gitignore  Cargo.toml
.cargo/: config
runtime/: Cargo.toml  metadata.scale
runtime/src/: laguna.rs  lib.rs
src/: main.rs  utils.rs
src/services/: contracts.rs
