[package]
edition = "2021"
name = "laguna-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
clap = "3.2.8"
color-eyre = "0.6.1"
jsonrpsee = {version = "=0.14.0", features = ["async-client"], package = "jsonrpsee"}

laguna-runtime = {branch = "main", git = "ssh://git@github.com/Laguna-Chain/laguna-chain.git"}

pallet-contracts-primitives = {git = 'https://github.com/Laguna-Chain/substrate.git', branch = "laguna-cli-fixes-polkadot-v0.9.22"}
pallet-contracts-rpc = {git = 'https://github.com/Laguna-Chain/substrate.git', branch = "laguna-cli-fixes-polkadot-v0.9.22"}

# old-contracts-primitives = {path = "../substrate/frame/contracts/common", package = "pallet-contracts-primitives"}
# old-sp-core = {path = "../substrate/primitives/core", package = "sp-core"}
# # old-sp-keyring = {path = "../substrate/primitives/keyring", package = "sp-keyring"}
old-sp-rpc = {git = 'https://github.com/paritytech//substrate.git', branch = "polkadot-v0.9.22", package = "sp-rpc"}
old-sp-runtime = {git = 'https://github.com/paritytech//substrate.git', branch = "polkadot-v0.9.22", package = "sp-runtime"}

primitives = {version = "0.1.0", path = "../laguna-chain/primitives"}

codec = {version = "3.1.5", package = "parity-scale-codec"}
runtime = {version = "0.1.0", path = "runtime"}
subxt = {version = "0.22.0"}

[workspace]
members = [
  "runtime",
]

[patch."https://github.com/Laguna-Chain/substrate.git"]
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
sp-externalities = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
sp-io = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
# replace an transient dependnecy using double // to complicate the url
sp-rpc = {git = 'https://github.com/paritytech//substrate.git', branch = "polkadot-v0.9.22"}
sp-runtime = {git = 'https://github.com/paritytech//substrate.git', branch = "polkadot-v0.9.22"}

[patch.crates-io]
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
# sp-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.22"}
